# cbottle_adjoint_sensitivity

./: .gitignore  README.md  backprop_gradients_amip_sst.py  grad_check.py  plot_adjoint_method_illustration.ipynb  plot_grad_check_figures.ipynb  plot_poster_figures.ipynb  pyproject.toml  requirements.txt
configs/: 1971-2020_TOA_rad_config.yaml  2020_north_atlantic_rlut_config_96h.yaml  2020_north_atlantic_rsut_config.yaml  base_config.yaml  debug_config_backprop.yaml
src/: QFactory.py  adjoint_samplers.py  config_loader.py  make_climatology_sst_dataset.py  netcdf_writer.py
