[project]
name = "diffusion-backprop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earth2grid",
    "cbottle",
    "earth2studio>=0.8.1",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "plotly>=6.2.0",
    "torch>=2.7.1",
]

[tool.uv.sources]
cbottle = { git = "https://github.com/NVlabs/cBottle.git" }
earth2grid = { git = "https://github.com/NVlabs/earth2grid.git" }

[tool.uv.workspace]
members = ["cbottle_adjoint_sensitivity"]
